# impar-ai-test

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml
api/src/: app.py  logging_config.py
api/src/controllers/: chat_controller.py  scrape_controller.py
api/src/models/: chat_model.py  scrape_model.py
api/src/services/: chat_service.py  ingestion_service.py  pgvector_service.py  scraper_service.py
api/src/services/agent/: agent.py  prompt.py  tools.py
docker/: init-db.sql  ollama-setup.sh  ollama.Dockerfile
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
front/src/: App.vue  main.js
front/src/api/: chat.js
front/src/components/: ChatInput.vue  ChatMessages.vue  ToastNotification.vue
front/src/router/: index.js
front/src/stores/: notification.js
front/src/views/: ChatView.vue
